--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next:build": "next build",
     "next:start": "next start",
     "start": "NODE_ENV=production || export NODE_ENV=production || SET \"NODE_ENV=production\" && node server/server.js",
-    "development":  "NODE_ENV=development || export NODE_ENV=development || SET \"NODE_ENV=development\" && node server/server.js",
+    "development": "NODE_ENV=development || export NODE_ENV=development || SET \"NODE_ENV=development\" && node server/server.js",
     "dev": "nodemon --exec \"npm run development\""
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "module-alias": "^2.1.0",
     "next": "^6.1.1",
+    "next-url-prettifier": "^1.3.0",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
