--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@zeit/next-css": "^0.2.0",
     "@zeit/next-sass": "^0.2.0",
     "express": "^4.16.3",
-    "module-alias": "^2.1.0",
     "next": "^6.1.1",
     "next-url-prettifier": "^1.3.0",
     "node-sass": "^4.9.3",
@@ -28,8 +27,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "validator": "^10.5.0"
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^23.5.0"
