--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@zeit/next-css": "^0.2.0",
     "@zeit/next-sass": "^0.2.0",
     "express": "^4.16.3",
+    "i18n": "^0.8.3",
+    "i18next": "^11.6.0",
+    "isomorphic-unfetch": "^2.1.1",
     "next": "^6.1.1",
     "next-url-prettifier": "^1.3.0",
     "node-sass": "^4.9.3",
@@ -26,6 +29,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-i18next": "^7.10.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
