Nodemon tools folder added to watch, version added to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Pagina personal Ivan Ruiz",
   "license": "MIT",
   "main": "server/server.js",
+  "version": "~1.6.1",
   "author": {
     "name": "Ivan Ruiz",
     "email": "ivan.ruizrosello@gmail.com"
