--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "Pagina personal Ivan Ruiz",
   "license": "MIT",
   "main": "server/server.js",
-  "version": "~1.6.1",
   "author": {
     "name": "Ivan Ruiz",
     "email": "ivan.ruizrosello@gmail.com"
@@ -32,7 +31,8 @@
     "react-dom": "^16.4.2",
     "react-i18next": "^7.10.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "sitemap": "^1.13.0"
   },
   "devDependencies": {
     "jest": "^23.5.0"
