--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next:start": "next start",
     "start": "NODE_ENV=production || export NODE_ENV=production || SET \"NODE_ENV=production\" && node server/server.js",
     "development": "NODE_ENV=development || export NODE_ENV=development || SET \"NODE_ENV=development\" && node server/server.js",
-    "dev": "nodemon --exec \"npm run development\""
+    "dev": "nodemon --exec \"npm run development\"",
+    "test": "jest --config=jest.config.json --watchAll"
   },
   "dependencies": {
     "@zeit/next-css": "^0.2.0",
@@ -35,6 +36,17 @@
     "sitemap": "^1.13.0"
   },
   "devDependencies": {
-    "jest": "^23.5.0"
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.1.2",
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest": "^23.5.0",
+    "raf": "^3.4.0",
+    "yarn": "^1.9.4",
+    "supertest": "^3.1.0"
   }
 }
