--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,20 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "node": "current"
-      }
-    }],
-    ["react-app"]
-  ]
+  "env": {
+    "development": {
+      "presets": ["next/babel"]
+    },
+    "production": {
+      "presets": ["next/babel"]
+    },
+    "test": {
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": "current"
+          }
+        }],
+        ["react-app"]
+      ]
+    }
+  }
 }
